# case-class

./: README.md  pyproject.toml  requirements.txt
app/: app.py
notebooks/: modeling.ipynb
