[tool.poetry]
name = "case-class"
version = "0.1.0"
description = ""
authors = ["LucasJFaust <lucasjfm.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
pandas = "1.5.3"
seaborn = "0.12.2"
scikit-learn = "1.2.1"
xgboost = "1.7.3"
lightgbm = "3.3.5"
ipykernel = "6.21.1"
streamlit = "1.10.0"
altair = "4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
